src/css/style.css
/* ... */
@keyframes intro {
  0% {
    -webkit-transform: translateY(-50%) scale(0) rotateX(10deg) rotateY(10deg) rotateZ(40deg);
            transform: translateY(-50%) scale(0) rotateX(10deg) rotateY(10deg) rotateZ(40deg);
  }
  100% {
    -webkit-transform: translateY(-50%) scale(1) rotateX(0deg) rotateY(0deg) rotateZ(0deg);
            transform: translateY(-50%) scale(1) rotateX(0deg) rotateY(0deg) rotateZ(0deg);
  }
}
a.download, a.follow {
  text-align: center;
  margin-top: 13px;
  width: 300px;
  float: left;
  display: inline-block;
  padding: 16px 30px;
  background: #EA495F;
  color: white;
  font-weight: 900;
  font-family: 'Roboto Condensed', sans-serif;
  text-decoration: none;
  border-radius: 2px;
  margin-right: 12px;
}
a.download i, a.follow i {
  margin-right: 10px;
}

a.follow {
  float: left;
  padding: 14px 30px;
  background: none;
  color: white;
  border: 2px solid white;
}
a.follow:hover {
  color: #41EFB6;
  border-color: #41EFB6;
}

.articleTileStandard img{
	height: auto !important;
	width: 100% !important;
}

.userDetailPopup .modal-content{
	padding: 0 !important;
}

.filter_blog hr{
	margin-top: 0;
}

.card {
  background: white;
  border-radius: 2px;
}

.user-card .user-avatar {
  text-align: center;
}
  .user-card .user-avatar .user-bg {
    width: 100%;
    border-top-left-radius: 0.3rem;
    border-top-right-radius: 0.3rem; }
    .user-card .user-avatar .user-bg:after {
      content: "";
      width: 100%;
      height: 100%;
      background: red; }
  .user-card .user-avatar .user-pic {
    background: white;
    padding: 0.25em;
    border-radius: 2px;
    margin-top: -10em;
    box-shadow: 0 0 1px rgba(0, 0, 0, 0.35); }
.user-card header, .user-card .status {
  text-align: center;
  padding: 0 1.5em; }
.user-card header h1 {
  margin-bottom: 0; }
.user-card header p {
  color: #717a7e;
  font-size: 1.2em;
  margin-top: 0;
  margin-bottom: 30px; }
.user-card .status {
  color: #75787b;
  font-size: 0.98em;
  margin-bottom: 30px;
}
.user-card .stats {
  margin-bottom: 0;
  padding: 0;
  list-style: none;
  display: table;
  width: 100.15%; }
  .user-card .stats li {
    margin: 0;
    padding: 0;
    width: 33.33334%;
    display: table-cell;
    text-align: center;
    border-left: 0.1em solid transparent; }
    .user-card .stats li:first-child {
      border-left: 0; }
      .user-card .stats li:first-child a {
        border-bottom-left-radius: 0.3rem; }
    .user-card .stats li:last-child a {
      border-bottom-right-radius: 0.3rem; }
    .user-card .stats li a, .user-card .stats li strong {
      display: block; }
    .user-card .stats li a {
      background: #f7f7f7;
      padding: 1em 0;
      color: #46494c; }
      .user-card .stats li a strong, .user-card .stats li a span {
        font-weight: 600;
        line-height: 1; }
      .user-card .stats li a strong {
        font-size: 2em; }
      .user-card .stats li a span {
        color: #717a7e; }
      .user-card .stats li a:hover {
        background: rgba(0, 0, 0, 0.05);
        color: #1c84d4; }
        .user-card .stats li a:hover span {
          color: #1d8cdf; }

.sidebarCard .links li {
  text-align: center;
  text-transform: uppercase;
  font-weight: 700;
  background: #f7f7f7;
  border-left: 0.1em solid #e6e6e6;
  border-bottom: 0.1em solid #e6e6e6;
      width: 50%; }

  .sidebarCard .links li:not(.active):hover , .sidebarCard .links li:not(.active):hover a{
    background: rgba(0, 0, 0, 0.05) !important;
    color: #1c84d4;
    cursor: pointer;
}

  .sidebarCard .links li.active {
    background: white;
    border-bottom-color: white; }
  .sidebarCard .links li:first-child {
    border-top-left-radius: 0.3rem;
    border-left: 0; }
  .sidebarCard .links li:last-child {
    border-top-right-radius: 0.3rem; }
.sidebarCard .links a {
  display: block;
  padding: 1.9em 0 1.5em;
  color: #1d2121; }
  .sidebarCard .links li.active a {
  background: white;
  border: 0 !important; }

.sidebarCard .content li:last-child figure {
  border-bottom: none;
  *zoom: 1; }
  .sidebarCard .content li:last-child figure:before, .sidebarCard .content li:last-child figure:after {
    content: " ";
    display: table; }
  .sidebarCard .content li:last-child figure:after {
    clear: both; }
.sidebarCard .content figure {
  margin: 0 1.2em;
  padding: 1.2em 0;
  border-bottom: 0.1em solid #ebebeb; }
  .sidebarCard .content figure img {
    float: left;
    margin-right: 1.2em;
    border-radius: 2px; }
  .sidebarCard .content figure .description p {
    margin: 0;
    margin-bottom: 0.5em; }
  .sidebarCard .content figure .description a {
    color: #46494c;
    font-size: 0.9em; }
    .sidebarCard .content figure .description a:hover {
      color: #e76049; }
    .sidebarCard .content figure .description a span {
      margin-right: 0.35em; }


.profile-card {
  background-color: #fff;
}

.profile-card .banner {
  border-bottom: 8px solid #2196F3;
}

.profile-card .banner img {
  display: block;
  height: auto;
  width: 100%;
}

.profile-card .user-image img {
  border: 8px solid #2196F3;
  border-radius: 50%;
  display: block;
  margin: -75px auto 0;
  max-width: 150px;
  width: 100%;
}

.user-image div{
	position: relative; border: 8px solid #2196F3; border-radius: 50%; display: block; margin: -75px auto 0; width: 130px;    height: 130px; color: #2196F3; background: white; font-size: 30px; font-weight: 500; text-align: center; vertical-align: middle; padding-top: 40px;
}

.pie-item input[readonly] {
       font-size: 15px !important;
}

@import "http://fonts.googleapis.com/css?family=Dosis:300,400,500,600,700";
#timeline .timeline-item:after, #timeline .timeline-item:before {
  content: '';
  display: block;
  width: 100%;
  clear: both;
}
*::-webkit-scrollbar {
    display: none;
}
/* ... */

